tests/ui/parser/utf16-le-without-bom.stderr
error: unknown start of token: \u{0}
  --> $DIR/utf16-le-without-bom.rs:6:2
   |
LL | f␀n␀ ␀m␀a␀i␀n␀(␀)␀ ␀{␀}␀
   |  ^
   |
   = help: source files must contain UTF-8 encoded text, unexpected null bytes might occur when a different encoding is used

error: unknown start of token: \u{0}
  --> $DIR/utf16-le-without-bom.rs:6:4
   |
LL | f␀n␀ ␀m␀a␀i␀n␀(␀)␀ ␀{␀}␀
   |    ^
   |
   = help: source files must contain UTF-8 encoded text, unexpected null bytes might occur when a different encoding is used

error: unknown start of token: \u{0}
  --> $DIR/utf16-le-without-bom.rs:6:6
   |
LL | f␀n␀ ␀m␀a␀i␀n␀(␀)␀ ␀{␀}␀
   |      ^
   |
   = help: source files must contain UTF-8 encoded text, unexpected null bytes might occur when a different encoding is used

error: unknown start of token: \u{0}
  --> $DIR/utf16-le-without-bom.rs:6:8
   |
LL | f␀n␀ ␀m␀a␀i␀n␀(␀)␀ ␀{␀}␀
   |        ^
   |
   = help: source files must contain UTF-8 encoded text, unexpected null bytes might occur when a different encoding is used

error: unknown start of token: \u{0}
  --> $DIR/utf16-le-without-bom.rs:6:10
   |
LL | f␀n␀ ␀m␀a␀i␀n␀(␀)␀ ␀{␀}␀
   |          ^
   |
   = help: source files must contain UTF-8 encoded text, unexpected null bytes might occur when a different encoding is used

error: unknown start of token: \u{0}
  --> $DIR/utf16-le-without-bom.rs:6:12
   |
LL | f␀n␀ ␀m␀a␀i␀n␀(␀)␀ ␀{␀}␀
   |            ^
   |
   = help: source files must contain UTF-8 encoded text, unexpected null bytes might occur when a different encoding is used

error: unknown start of token: \u{0}
  --> $DIR/utf16-le-without-bom.rs:6:14
   |
LL | f␀n␀ ␀m␀a␀i␀n␀(␀)␀ ␀{␀}␀
   |              ^
   |
   = help: source files must contain UTF-8 encoded text, unexpected null bytes might occur when a different encoding is used

error: unknown start of token: \u{0}
  --> $DIR/utf16-le-without-bom.rs:6:16
   |
LL | f␀n␀ ␀m␀a␀i␀n␀(␀)␀ ␀{␀}␀
   |                ^
   |
   = help: source files must contain UTF-8 encoded text, unexpected null bytes might occur when a different encoding is used

error: unknown start of token: \u{0}
  --> $DIR/utf16-le-without-bom.rs:6:18
   |
LL | f␀n␀ ␀m␀a␀i␀n␀(␀)␀ ␀{␀}␀
   |                  ^
   |
   = help: source files must contain UTF-8 encoded text, unexpected null bytes might occur when a different encoding is used

error: unknown start of token: \u{0}
  --> $DIR/utf16-le-without-bom.rs:6:20
   |
LL | f␀n␀ ␀m␀a␀i␀n␀(␀)␀ ␀{␀}␀
   |                    ^
   |
   = help: source files must contain UTF-8 encoded text, unexpected null bytes might occur when a different encoding is used

error: unknown start of token: \u{0}
  --> $DIR/utf16-le-without-bom.rs:6:22
   |
LL | f␀n␀ ␀m␀a␀i␀n␀(␀)␀ ␀{␀}␀
   |                      ^
   |
   = help: source files must contain UTF-8 encoded text, unexpected null bytes might occur when a different encoding is used

error: unknown start of token: \u{0}
  --> $DIR/utf16-le-without-bom.rs:6:24
   |
LL | f␀n␀ ␀m␀a␀i␀n␀(␀)␀ ␀{␀}␀
   |                        ^
   |
   = help: source files must contain UTF-8 encoded text, unexpected null bytes might occur when a different encoding is used

error: unknown start of token: \u{0}
  --> $DIR/utf16-le-without-bom.rs:7:1
   |
LL | ␀
   | ^
   |
   = help: source files must contain UTF-8 encoded text, unexpected null bytes might occur when a different encoding is used

error: expected one of `!` or `::`, found `n`
  --> $DIR/utf16-le-without-bom.rs:6:3
   |
LL | f␀n␀ ␀m␀a␀i␀n␀(␀)␀ ␀{␀}␀
   |   ^ expected one of `!` or `::`
   |
help: consider removing the space to spell keyword `fn`
   |
LL - f␀n␀ ␀m␀a␀i␀n␀(␀)␀ ␀{␀}␀
LL + fn␀ ␀m␀a␀i␀n␀(␀)␀ ␀{␀}␀
   |

error: aborting due to 14 previous errors

